# linear-haskell-experiments

./: .gitignore  README.md  cabal.project  document.tex  haskell_style.tex  linear-haskell-experiments.cabal  stack.yaml  yaml_style.tex
experiments/Simple/: BinaryTree.lhs  Pure.lhs
