name: linear-haskell-experiments
version: 0.1.0.0
cabal-version: >=1.10
author: Michael Vollmer
build-type: Simple
extra-source-files: README.md

library
  hs-source-dirs: experiments
  other-modules:
    Simple.Pure
    Simple.BinaryTree
  build-depends:
    base >= 4.7 && < 5,
    hspec,
    HUnit,
    linear-base,
    storable-tuple,
    vector,
    text,
    binary,
    bytestring,
    deepseq
  default-language: Haskell2010
  default-extensions: LinearTypes, GADTs
